# core

./: .gitignore  Cargo.toml
.github/workflows/: core-api-edge-pipeline.yml
fleet_api/: Cargo.toml  main.rs  private_key.pem  public_key.pem
fleet_api/migrations/: 20260314000000_create_telemetry_table.sql
fleet_api/src/: main.rs
ops/: update-core-api-from-release.sh
ops/systemd/: core-api-release-updater.env.example  core-api-release-updater.service  core-api-release-updater.timer
shared_types/: Cargo.toml
shared_types/src/: lib.rs
