[package]
name = "fleet_api"
version = "0.1.0"
edition = "2024"

[dependencies]
shared_types = { path = "../shared_types" }
axum = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9.3"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[dev-dependencies]
tower = "0.5.3"
